<resources>
    <string name="app_name" translatable="false">SoundNest</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_create_account">Create account</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_profile">Profile</string>
    <string name="lbl_user">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_playlists">Your playlists</string>
    <string name="lbl_recent_searches">Recent searches</string>
    <string name="lbl_mandatory">Mandatory</string>
    <string name="lbl_comments">Comments</string>
    <string name="lbl_register_success">Registered successfully</string>
    <string name="lbl_register_error">Fail on the register: %1$s</string>
    <string name="lbl_invalid_code">Invalid code</string>
    <string name="lbl_additional_info">Additional information</string>
    <string name="lbl_new_password">New password</string>
    <string name="lbl_repeat_new_password">Repeat new password</string>
    <string name="lbl_verification_code">Verification code</string>
    <string name="lbl_change_password">Change password</string>
    <string name="lbl_rol_listener">Listener</string>
    <string name="lbl_rol_moderator">Moderator</string>
    <string name="lbl_rol_unknown">Unknown role</string>
    <string name="lbl_delete_notification">Delete notification</string>
    <string name="lbl_delete_comment">Delete comment</string>
    <string name="lbl_invalid_credentials">Invalid credentials</string>
    <string name="lbl_user_not_found">User not found</string>
    <string name="lbl_failed_to_connect">failed to connect</string>
    <string name="lbl_create_playlist">Create new playlist</string>
    <string name="lbl_popular">Most popular this month</string>
    <string name="lbl_recent">Most recent (this week)</string>
    <string name="lbl_no_comments">No comments yet, be the first!</string>
    <string name="lbl_clear_all">Clear all</string>
    <string name="lbl_edit_playlist">Edit playlist</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_select_genre">Select genre</string>
    <string name="lbl_no_playlists">You do not have playlists yet\nclick here to create one</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_register">Register</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="btn_save_changes">Save changes</string>
    <string name="btn_change_password">Change password</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_create">Create</string>
    <string name="btn_play">Play</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="action_verify">Verify</string>
    <string name="action_cancel">Cancel</string>
    <string name="msg_enter_code">Enter the code sent to the email %1$s</string>
    <string name="msg_back">Back</string>
    <string name="msg_play_pause">Play/Pause</string>
    <string name="msg_next">Next</string>
    <string name="msg_download">Download</string>
    <string name="msg_info">Info</string>
    <string name="msg_comments">Comments</string>
    <string name="msg_song_image">Song image</string>
    <string name="msg_hello_user">Hello %1$s!</string>
    <string name="msg_upload_success">Uploaded successfully</string>
    <string name="msg_exit_change_password">Password changed successfully</string>
    <string name="msg_error_change_password">There was an error changing the password</string>
    <string name="msg_code_sent">Code sent to %1$s</string>
    <string name="msg_code_error">There was an error sending the code</string>
    <string name="msg_enter_a_code">Enter a valid code</string>
    <string name="msg_password_too_weak">The password must have at least 6 characters</string>
    <string name="msg_password_match">The passwords must match</string>
    <string name="msg_error_login">There was an error logging in, try again later</string>
    <string name="msg_credentials_login">Invalid credentials</string>
    <string name="msg_delete_notification">Are you sure you want to delete this notification?</string>
    <string name="msg_delete_comment">Are you sure you want to delete the comment from %1$s?</string>
    <string name="msg_unable_load_pfp">Unable to load profile picture</string>
    <string name="msg_no_pfp">You have not uploaded a profile picture yet</string>
    <string name="msg_login_error">There was an error logging in</string>
    <string name="msg_server_error">There was an error connecting to the server</string>
    <string name="msg_profile_saved">Profile information updated</string>
    <string name="msg_fields_required">Username, email and password are required</string>
    <string name="msg_no_notifications">You have no notifications</string>
    <string name="msg_play_playlist">Play playlist</string>
    <string name="msg_no_playlists">There are no songs in this playlist yet.</string>
    <string name="msg_no_song_loaded">Click on a song to play it!</string>
    <string name="msg_playlists_full">All your playlist are full.\nCreate a new one to add more.</string>
    <string name="msg_profile_edited">Your profile has been updated. To apply the changes, you need to log in again.</string>
    <string name="msg_password_changed">Your password has been changed. To apply the changes, you need to log in again.</string>
    <string name="msg_no_changes_made">No changes were made.</string>
    <string name="hint_recover_password">Enter your email to recover your password</string>
    <string name="hint_code">Code</string>
    <string name="hint_publish_song">Publish song</string>
    <string name="hint_song_name">Song name</string>
    <string name="hint_description_song">Song description</string>
    <string name="hint_playlist_description">Playlist description</string>
    <string name="hint_playlist_name">Playlist name</string>
    <string name="hint_delete_playlist">Delete playlist</string>
    <string name="hint_edit_playlist">Edit playlist</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_new_comment">Write new comment...</string>
    <string name="hint_select_file">Select file</string>
    <string name="hint_select_image">Select image...</string>
    <string name="hint_artist">Artist</string>
    <string name="hint_search">Search…</string>
    <string name="hint_reply_to">"Reply to: "</string>
    <string name="hint_delete_song">Delete song</string>
    <string name="hint_song_info">Information</string>
    <string name="hint_touch_select_image">Touch to\nselect</string>
    <string name="hint_forgot_password">Did you forget your password?</string>
    <string name="desc_profile_photo">Profile picture</string>
    <string name="desc_add_song">Publish song</string>
    <string name="desc_add_playlist">Add playlist</string>
    <string name="desc_random_song">Random song</string>
    <string name="desc_stats">See stats</string>
    <string name="desc_filter">Filter</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_options">Options</string>
    <string name="txt_comment_placeholder">Here goes the comment text, it can be longer and occupy multiple lines without being cut.</string>
    <string name="txt_author_placeholder">Comment author</string>
    <string name="error_loading_notifications">There was an error loading your notifications</string>
    <string name="error_loading_comments">There was an error loading the comments</string>
    <string name="error_empty_comment">The comment cannot be empty</string>
    <string name="error_no_user">It was not possible to load the user, try again later</string>
    <string name="error_http">HTTP %1$d: %2$s</string>
    <string name="error_network">Network: %1$s</string>
    <string name="error_unknown">Error: %1$s</string>
    <string name="error_empty">Empty response from server</string>
    <string name="error_email_exists">The email is already registered.</string>
    <string name="error_username_exists">The username is already in use.</string>
    <string name="error_invalid_code">The code is invalid.</string>
    <string name="error_registration_generic">There was an error registering, try again later.</string>
    <string name="error_saving_profile">There was an error saving the information</string>
    <string name="exception_extra_email">EXTRA_EMAIL is required in the Intent</string>
    <string name="msg_file_saved">Saved in %1$s</string>
    <string name="msg_download_error">Error downloading: %1$s</string>
    <string name="msg_cannot_create_file">Impossible to create file.</string>
    <string name="msg_added_to_playlist">Added to %1$s</string>
    <string name="msg_generic_error">Error: %1$s</string>
    <string name="msg_error_downloading_song">Error downloading: %1$s</string>
    <string name="msg_name_required">Name is required</string>
    <string name="msg_description_required">Description is required</string>
    <string name="msg_image_required">Please select an image</string>
    <string name="msg_file_too_large">The file exceeds 20 MB</string>
    <string name="msg_invalid_image_format">Only PNG or JPG images are allowed</string>
    <string name="msg_image_load_failed">Could not load the image</string>
    <string name="msg_image_load_error">Error loading image: %1$s</string>
    <string name="msg_error_creating_playlist">Error creating playlist: %1$s</string>
    <string name="dialog_title_confirm_delete">Confirm deletion</string>
    <string name="dialog_msg_confirm_delete">Delete playlist “%1$s”?</string>
    <string name="action_delete">Delete</string>
    <string name="msg_playlist_deleted">Playlist deleted</string>
    <string name="err_loading_playlists">Error loading playlists: %1$s</string>
    <string name="err_network_loading_playlists">Network problem while loading playlists</string>
    <string name="err_unknown_loading_playlists">Unknown error while loading playlists</string>
    <string name="err_invalid_playlist_data">Playlist must have a name and a description</string>
    <string name="err_missing_image">Please select an image for the playlist</string>
    <string name="err_processing_image">Error processing selected image</string>
    <string name="err_invalid_image_file">Invalid image file</string>
    <string name="err_http_create_playlist">HTTP error: %1$s</string>
    <string name="err_network_create_playlist">Network error while creating playlist</string>
    <string name="err_unknown_create_playlist">Unknown error while creating playlist</string>
    <string name="err_unexpected_create_playlist">Unexpected error: %1$s</string>
    <string name="err_http_delete_playlist">Could not delete playlist: %1$s</string>
    <string name="err_network_delete_playlist">Network problem while deleting playlist</string>
    <string name="err_unknown_delete_playlist">Unknown error while deleting playlist</string>
    <string name="err_network_add_song">Network error while adding song</string>
    <string name="err_unknown_add_song">Unknown error while adding song</string>
    <string name="err_network_remove_song">Network error while removing song</string>
    <string name="err_unknown_remove_song">Unknown error while removing song</string>
    <string name="err_http_edit_playlist">Error editing playlist: %1$s</string>
    <string name="err_network_edit_playlist">Network problem</string>
    <string name="err_unknown_edit_playlist">Unexpected error while editing playlist</string>
</resources>