<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.soundnest_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.soundnest_android.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.example.soundnest_android.ui.playlists.PlaylistsFragment"
        android:label="@string/title_playlists"
        tools:layout="@layout/fragment_playlists" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.soundnest_android.ui.playlists.PlaylistsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_playlists" />
</navigation>