<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/accent_purple"
    android:padding="16dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-16dp">

    <ImageView
        android:id="@+id/songImage"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/msg_song_image"
        android:scaleType="centerCrop"
        android:src="@drawable/img_default_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlayPause" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Artist Name"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/songImage"
        app:layout_constraintTop_toBottomOf="@id/songTitle" />


    <TextView
        android:id="@+id/songTitle"
        android:layout_width="325dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="Song Title"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/songImage"
        app:layout_constraintTop_toBottomOf="@id/btnPlayPause" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_back"
        android:src="@drawable/ic_baseline_skip_previous_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnPlayPause"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_play_pause"
        android:src="@drawable/ic_baseline_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_next"
        android:src="@drawable/ic_baseline_skip_next_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlayPause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnDownload"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_download"
        android:src="@drawable/ic_baseline_download_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnComments"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_comments"
        android:src="@drawable/ic_baseline_comment_24"
        app:layout_constraintBottom_toTopOf="@id/songTitle"
        app:layout_constraintStart_toEndOf="@id/btnDownload"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnSongInfo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_info"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toTopOf="@id/songTitle"
        app:layout_constraintStart_toEndOf="@id/btnComments"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>
