<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playerControl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/accent_purple"
    android:padding="16dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-16dp">

    <ImageView
        android:id="@+id/songImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/msg_song_image"
        android:scaleType="centerCrop"
        android:src="@drawable/img_default_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlayPause" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="219dp"
        android:layout_height="21dp"
        android:layout_marginTop="4dp"
        android:text="Artist Name"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/songImage"
        app:layout_constraintTop_toBottomOf="@id/songTitle" />


    <TextView
        android:id="@+id/songTitle"
        android:layout_width="218dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:text="Song Title"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toEndOf="@id/songImage"
        app:layout_constraintTop_toBottomOf="@id/btnPlayPause" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_back"
        android:src="@drawable/ic_baseline_skip_previous_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnPlayPause"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_play_pause"
        android:src="@drawable/ic_baseline_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_next"
        android:src="@drawable/ic_baseline_skip_next_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlayPause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnDownload"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_download"
        android:src="@drawable/ic_baseline_download_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnComments"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <ImageButton
        android:id="@+id/btnComments"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/msg_comments"
        android:src="@drawable/ic_baseline_comment_24"
        app:layout_constraintStart_toEndOf="@id/songTitle"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
